# AlphaToMesh

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.cpp  resources.h  stacktrace.cpp
AntTweakBar/: CMakeLists.txt
AntTweakBar/include/: AntTweakBar.h
AntTweakBar/src/: MiniGLFW3.h  TwEventGLFW3.c  TwMgr.cpp
Doku/: ProjektDoku.tex  literatur.bib  vorlage.tcp  vorlage.tex  vorlage.tps
Doku/chapters/: Ergebnis.tex  Fazit.tex  Motivation.tex  Selbststaendigkeitserklaerung.tex
glew/: CMakeLists.txt
glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
glm/detail/: _features.hpp  _fixes.hpp  _noise.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_matrix.inl  func_noise.hpp  func_noise.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  glm.cpp  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_geometric.inl  intrinsic_integer.hpp  intrinsic_matrix.hpp  intrinsic_trigonometric.hpp  intrinsic_vector_relational.hpp  precision.hpp  setup.hpp  type_float.hpp  type_gentype.hpp  type_half.hpp  (+30 more)
glm/gtc/: bitfield.hpp  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  integer.hpp  integer.inl  matrix_access.hpp  matrix_integer.hpp  matrix_inverse.hpp  matrix_transform.hpp  matrix_transform.inl  noise.hpp  packing.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  round.hpp  type_precision.hpp  type_ptr.hpp  type_ptr.inl  ulp.hpp  ulp.inl  vec1.hpp
glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  dual_quaternion.hpp  dual_quaternion.inl  euler_angles.hpp  extend.hpp  extented_min_max.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  integer.hpp  integer.inl  intersect.hpp  intersect.inl  io.hpp  io.inl  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  matrix_transform_2d.inl  mixed_product.hpp  multiple.hpp  norm.hpp  normal.hpp  (+32 more)
kiui/: CMakeLists.txt
kiui/src/: CMakeLists.txt
lodepng/: CMakeLists.txt
nanogui/: CMakeLists.txt
nanogui/include/nanogui/: formscreen.h  opengl.h  screen.h  widget.h
nanogui/src/: nanogui.cpp  screen.cpp
src/: MainClass.cpp  MainClass.hpp  Rim.cpp  Rim.h  imageStruct.hpp  renderImage.cpp  renderImage.h  renderRim.cpp  renderRim.h  shader.h  triangleMesh.cpp  triangleMesh.h
util/: stacktrace.cpp  stacktrace.hpp
